adding manifest file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="js/list.js"></script>
 
         <link rel="stylesheet" href="app.css"/>
+        <link rel="manifest" href="manifest.json">
 
     </body>
 </html>
