--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <link rel="manifest" href="manifest.json">
+</head>
     <body ng-app="myApp">
         <div ng-view="">
 
@@ -16,7 +18,6 @@
         <script src="js/list.js"></script>
 
         <link rel="stylesheet" href="app.css"/>
-        <link rel="manifest" href="manifest.json">
 
     </body>
 </html>
